Update the wording in the tutorial

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -282,7 +282,7 @@
    "source": [
     "As can be seen, the composition of the original deformation and the inverted deformation is the identity deformation.\n",
     "\n",
-    "One can also calculate gradients with respect to the inverse operation."
+    "One can also calculate gradients with respect to the inversion operation."
    ]
   },
   {
