--- a/tutorials/quick_start.ipynb
+++ b/tutorials/quick_start.ipynb
@@ -438,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11 (main, Apr 20 2023, 19:02:41) [GCC 11.2.0]"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4,
   "vscode": {
